# SDU-CS-Sophomore-Material

./: ReadMe.md
second_semester/programming/codes/: CMakeLists.txt
second_semester/programming/codes/C++exp/exp1/: plusplus.cpp
second_semester/programming/codes/C++ppt/: test.cpp
second_semester/programming/codes/classCode/: fff.cpp
second_semester/programming/codes/classCode/week1/: mergeSort.cpp
second_semester/programming/codes/csp/practice/: CMakeLists.txt
second_semester/programming/codes/csp/practice/ACWING/DP/bag/: pickMedicine.cpp
second_semester/programming/codes/csp/practice/ACWING/DP/dfs/: ski.cpp
second_semester/programming/codes/csp/practice/ACWING/DP/segDP/: circleStoneMerge.cpp
second_semester/programming/codes/csp/practice/ACWING/DP/stateCompression/: homeWork.cpp
second_semester/programming/codes/csp/practice/ACWING/DP/treeDP/: DanceWithoutHead.cpp  center.cpp
second_semester/programming/codes/csp/practice/ACWING/DP/triAngle/: peaNut.cpp
second_semester/programming/codes/csp/practice/ACWING/DP/upSerial/: KaitoGlide.cpp
second_semester/programming/codes/csp/practice/ACWING/Tree/: TreeDiameter.cpp  TreeDiameterDfs.cpp  minTree.cpp  newStart.cpp
second_semester/programming/codes/csp/practice/ACWING/TreeArrayOrLinearSeg/: maxNum.cpp  segSum.cpp  segSumAsegAdd.cpp
second_semester/programming/codes/csp/practice/ACWING/basic/: kmp.cpp
second_semester/programming/codes/csp/practice/ACWING/basic/GREED/: NiuNiuPlaying.cpp  activityArrange.cpp  coverSeq.cpp  groupSeq.cpp  homework.cpp  mergeGuo.cpp  pickPot.cpp  pickWareHouse.cpp  processFactory.cpp  queueForWater.cpp
second_semester/programming/codes/csp/practice/ACWING/basic/binarySearch/: bestCowCover.cpp  specialSort.cpp
second_semester/programming/codes/csp/practice/ACWING/basic/sumOrDivision/: IecDec.cpp  laserBomb.cpp
second_semester/programming/codes/csp/practice/ACWING/dfsOrBfs/: 8Queen.cpp  addSerial.cpp  carryGifts.cpp  catClimb.cpp  countPool.cpp  dfsMaze.cpp  fixElectricity.cpp  horseGoSun.cpp  magicCube.cpp  matrixDIs.cpp  sortNums.cpp
second_semester/programming/codes/csp/practice/ACWING/graph/SCC/: maxHalfGraph.cpp  popularCow.cpp  schoolNetWork.cpp
second_semester/programming/codes/csp/practice/ACWING/graph/dConstrain/: candy.cpp  seg.cpp
second_semester/programming/codes/csp/practice/ACWING/graph/minPath/: QiQibus.cpp  dijkstra.cpp  dijkstraHeap.cpp  happyNewYear.cpp  hotWave.cpp  maze.cpp  spfa.cpp  tourOfCow.cpp
second_semester/programming/codes/csp/practice/ACWING/graph/minusCircle/: wolmHole.cpp
second_semester/programming/codes/csp/practice/ACWING/noSort/: JiJiSubway.cpp  QFplayTableGame.cpp  charMagic.cpp  goBang.cpp  modalNum.cpp  negotiatePrice.cpp
second_semester/programming/codes/csp/practice/CCF/: 13-12-1.cpp  13-12-2.cpp  MingGameAns.cpp  Minggame.cpp  buyVegAgain.cpp  deliverFood.cpp  deliverFoodAns.cpp  unzip.cpp
second_semester/programming/codes/csp/practice/DailyDebug/: Calculater.cpp  LinkDebug.cpp  lab9_1.cpp
second_semester/programming/codes/csp/practice/SDUOJ/: test.cpp
second_semester/programming/codes/csp/practice/SDUOJ/21-round1/A/: amazingTyper.cpp  badKeyTest.cpp  ddd.cpp  hitAns.cpp  hitB.cpp
second_semester/programming/codes/csp/practice/SDUOJ/21-round1/B/: RGB.cpp  noddles.cpp  noodlesAns.cpp  pwStrong.cpp
second_semester/programming/codes/csp/practice/SDUOJ/22-round1/: countNum.cpp  cutCake.cpp  findHigh.cpp  pickStars.cpp  pickStarsMatrix.cpp
second_semester/programming/codes/csp/practice/SDUOJ/23-final/: Monk.cpp  pickSeg.cpp  rank.cpp  tiger.cpp
second_semester/programming/codes/csp/practice/SDUOJ/BigSimutationScore2/: CatCatMechanics.cpp  CatCatProtocal.cpp  FeifeiGambing.cpp  MaoMaoRotatingHorse.cpp  RotatingHorse2.cpp  TTandCat.cpp
second_semester/programming/codes/csp/practice/SDUOJ/SimutationScore5/: AV.cpp  WolfAndSheep.cpp  fishing.cpp  fishing100.cpp  generateTree.cpp  rangeSum.cpp
second_semester/programming/codes/csp/practice/SDUOJ/homeWork/classes/: pourWaterAns.cpp
second_semester/programming/codes/csp/practice/SDUOJ/homeWork/week1/: 10.cpp  13.cpp  14.cpp  15.cpp  6.cpp  8.cpp  9.cpp
second_semester/programming/codes/csp/practice/homeWork/: test.cpp
second_semester/programming/codes/csp/practice/homeWork/classes/: pourWater.cpp
second_semester/programming/codes/csp/practice/homeWork/week1/: 16.cpp  2.cpp  4.cpp  5.cpp
second_semester/programming/codes/csp/practice/homeWork/week10/: ACrank.cpp  BIT.cpp  MingGoToSchool.cpp  SegTree.cpp  inversionPair.cpp
second_semester/programming/codes/csp/practice/homeWork/week11/: CSP2020fileSystem.cpp
second_semester/programming/codes/csp/practice/homeWork/week12/: CommonFix.cpp  MatrixNum.cpp  climbStep.cpp  longestPrefix.cpp
second_semester/programming/codes/csp/practice/homeWork/week13/: GroupBag.cpp  MultipleBag.cpp
second_semester/programming/codes/csp/practice/homeWork/week14/: MondriansDream.cpp  bracketSequence.cpp
second_semester/programming/codes/csp/practice/homeWork/week15/: Diameterans.cpp  Fibonacci.cpp  RGB.cpp  biggestSeqSum.cpp
second_semester/programming/codes/csp/practice/homeWork/week3/: boardProblem.cpp  game.cpp  selectNum.cpp  strangeElevator.cpp
second_semester/programming/codes/csp/practice/homeWork/week4/: copyElse.cpp  copyer.cpp  copyerAns.cpp  cutLine.cpp  game.cpp
second_semester/programming/codes/csp/practice/homeWork/week5/: divisorAgain.cpp  maxArea.cpp  stoneAgain.cpp  windows.cpp
second_semester/programming/codes/csp/practice/homeWork/week6/: buildRoad.cpp  eraseYuanYIn.cpp  netWorkFeedBack.cpp  yuanYinJump.cpp
second_semester/programming/codes/csp/practice/homeWork/week7/: array.cpp  magicCube.cpp  sheep.cpp  watering.cpp
second_semester/programming/codes/csp/practice/homeWork/week8/: buyFood.cpp  crossHole.cpp
second_semester/programming/codes/csp/practice/homeWork/week9/: YuanyinBack.cpp  msgDeliver.cpp  scoreRank.cpp  sowYogurt.cpp
second_semester/programming/codes/homeWork/week1/: 1.cpp  11.cpp  12.cpp  3.cpp  7.cpp
second_semester/programming/codes/homeWork/week2/: A.cpp  D.cpp
(+1470 files in other folders)
