cmake_minimum_required(VERSION 3.25)
project(codes)

set(CMAKE_CXX_STANDARD 14)

add_executable(codes
        C++exp/exp1/2_constexp.cpp
        C++exp/exp1/c9-5.cpp
        C++exp/exp1/P1_-11.cpp
        C++exp/exp1/plusplus.cpp
        C++ppt/test.cpp
        classCode/week1/mergeSort.cpp
        classCode/fff.cpp
        csp/practice/21-round1/amazingTyper.cpp
        csp/practice/21-round1/badKeyTest.cpp
        csp/practice/21-round1/hitAns.cpp
        csp/practice/21-round1/hitB.cpp
        csp/practice/22-round1/countNum.cpp
        csp/practice/22-round1/cutCake.cpp
        csp/practice/22-round1/findHigh.cpp
        homeWork/week1/1.cpp
        homeWork/week1/10.cpp
        homeWork/week1/11.cpp
        homeWork/week1/12.cpp
        homeWork/week1/13.cpp
        homeWork/week1/14.cpp
        homeWork/week1/15.cpp
        homeWork/week1/16.cpp
        homeWork/week1/2.cpp
        homeWork/week1/3.cpp
        homeWork/week1/4.cpp
        homeWork/week1/5.cpp
        homeWork/week1/6.cpp
        homeWork/week1/7.cpp
        homeWork/week1/8.cpp
        homeWork/week1/9.cpp
        homeWork/week2/A.cpp
        homeWork/week2/B.cpp
        homeWork/week2/C.cpp
        homeWork/week2/D.cpp csp/practice/22-round1/hi.cpp)
